# caregiving

./: .all-contributorsrc  .codeclimate.yaml  .codeclimate.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Procfile  README.md  deployment.md  dev.py  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  django.yml
accounts/: backends.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0002_alter_user_table.py  0003_alter_user_email.py  0003_user_preferences.py
activities/: admin.py  factories.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
activities/migrations/: 0001_initial.py  0003_activity_caregiver_role.py  0004_alter_activity_activity_type_and_more.py  0005_delete_activity.py
caregivers/: factories.py
caregivers/migrations/: 0002_alter_caregiverrole_options_and_more.py
common/static/: style.css
common/templates/: 403.html  base.html  home.html  i18n.html  navigation.html
core/: asgi.py  constants.py  settings.py  urls.py  wsgi.py
homes/: admin.py  apps.py  charts.py  factories.py  forms.py  models.py  queries.py  tests.py  urls.py  views.py
homes/migrations/: 0004_homegroup.py  0005_home_home_group.py  0006_alter_home_home_group.py  0007_homeuserrelation.py
metrics/: admin.py  factories.py  forms.py  helpers.py  models.py  tests.py
metrics/migrations/: 0001_initial.py  0001_squashed_0006_residentactivity_group_activity_id.py  0002_alter_residentactivity_activity_type_and_more.py  0003_alter_residentactivity_options.py  0003_residentactivity_activity_date.py  0004_alter_residentactivity_resident.py  (+3 more)
preferences/: forms.py  models.py  urls.py  views.py
project/: manage.py
residents/: apps.py  charts.py  factories.py  models.py  tests.py  views.py
templates/: base.html  navigation.html
work/: context_processors.py  factories.py  models.py  views.py
(+123 files in other folders)
