[tool.poetry]
name = "gerilife-caregiving"
version = "0.1.0"
description = "Caregiving visualization tool to promote wellness in elder-care communities. "
authors = ["Brylie Christopher Oxley <brylie@amble.fi>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
crispy-bootstrap5 = "^0.6"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
