[tool.poetry]
name = "gerilife-caregiving"
version = "0.1.0"
description = "Caregiving visualization tool to promote wellness in elder-care communities. "
authors = ["Brylie Christopher Oxley <brylie@amble.fi>"]
license = "EUPL-1.2"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
crispy-bootstrap5 = "^0.6"
django-crispy-forms = "^1.14.0"
django-environ = "^0.8.1"
whitenoise = "^6.0.0"
psycopg2-binary = "^2.9.3"
pandas = "^1.4.2"
plotly = "^5.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
