[project]
name = "gerilife-caregiving"
version = "0.1.0"
description = "Caregiving visualization tool to promote wellness in elder-care communities."
authors = ["Brylie Christopher Oxley <brylie@protonmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
dependencies = [
    "crispy-bootstrap5>=2023.10,<2024.0",
    "django>=5.0,<6.0",
    "django-crispy-forms>=2.1,<3.0",
    "django-debug-toolbar>=4.2.0,<5.0",
    "django-environ>=0.11.2,<1.0",
    "faker>=21.0.0,<22.0",
    "plotly>=5.18.0,<6.0",
    "psycopg2-binary>=2.9.9,<3.0",
    "shortuuid>=1.0.11,<2.0",
    "whitenoise>=6.6.0,<7.0",
]

[dependency-groups]
dev = [
    "coverage>=7.3.3,<8.0",
    "factory-boy>=3.3.0,<4.0",
    "pytest>=7.4.3,<8.0",
    "pytest-django>=3.5.1,<4.0",
]
